$Id$

0.5.1
	- backend: add_net now adds default auto assign ranges, 
	  update_net now also checks that auto assign is inside given net
	- frames mode now (hopefully) works better with non-Mozilla
	  browsers
	- added external authentication support (sample authenticator
	  script included in contrib for authentication against Kerberos)
	- fixed search result CVS output	
	- added configuration option (SAURON_RHF) for configuring
	  which fields are mandatory in restricted host edit/add forms
	- adduser: now displays user group when prompting for user creation
	- expire-hosts: fixed erroneous (but harmless) warnings about
	  hosts not having ethernet address
     
	
0.5.0
	- implemented host copy option
	- added host history display button
	- added ping/traceroute support
	- user account expiration implemented
	- adduser now prompts for expiration date for new accounts
	- adduser now suggests default password for new accounts
	- added flag for omiting WKS/HINFO record generation per server basis
	- added private flag to nets (for hiding nets/hosts from browser)
	- added "show hosts" button to network entry display
	- update-dhcp-info now updates dhcp_date field only for
	  DHCPACK or BOOTREPLY
	- new user rights: max expiration time, default department 
	- fixed SRV record support	
	- fixed nondeterministic behaviour with multiple IPs in 
	  'fixed-address' lines in dhcpd.conf
	- search results sorting a'la browser.cgi
	- hide "VLAN" info from normal users (now, configuration variable
          PLEVEL_VLANS defines required priv.level to see "VLAN" info)
	- added privilege level & IP-mask access controls
	- added privilege levels to {wks,mx}-templates, groups and nets
	  tables
	- added email field to users table and account expiration support
	- added vlans table and VLAN (Layer-2 networks) management 
	- add new "info" fields to hosts table (asset ID)
	- clear ether_alias ptrs from other hosts when deleting a host